# lakeflow-community-connectors

./: .gitignore  README.md
.claude/: settings.json
.github/workflows/: publish-testpypi.yml  pylint.yml  test_exclude.txt  tests.yml
libs/: spec_parser.py
libs/test/: test_spec_parser.py
pipeline/: ingestion_pipeline.py  lakeflow_python_source.py
prompts/: README.md  implement_write_back_testing.md  validate_incremental_sync.md
src/databricks/labs/community_connector/sources/azure_devops/: README.md  __init__.py  _generated_azure_devops_python_source.py  azure_devops.py  azure_devops_api_doc.md  azure_devops_schemas.py  azure_devops_utils.py  connector_spec.yaml  pyproject.toml
src/databricks/labs/community_connector/sources/azure_devops/examples/: CLI_COMMANDS.md  pipeline_spec_auto_discovery.yaml  pipeline_spec_full.yaml  pipeline_spec_minimal.yaml
src/databricks/labs/community_connector/sources/sap_successfactors/: README.md  __init__.py  _generated_sap_successfactors_python_source.py  connector_spec.yaml  odata_metadata.py  pyproject.toml  sap_successfactors.py  table_metadata.py  table_schemas.py
src/databricks/labs/community_connector/sources/sap_successfactors/api_docs/: AdditionalServices_api_doc.md  AvailableTimeTypes_api_doc.md  Balances_api_doc.md  BudgetPeriodGO_api_doc.md  CalSession_api_doc.md  ClockInClockOutExternal_api_doc.md  ClockInClockOutIntegration_api_doc.md  ClockInClockOutTimeEventsRestAPI_api_doc.md  ClockInClockOut_api_doc.md  ECAdvances_api_doc.md  ECCompensationInformation_api_doc.md  ECDismissalProtection_api_doc.md  ECEmployeeCentralPayroll_api_doc.md  ECEmploymentInformation_api_doc.md  ECFoundationOrganization_api_doc.md  ECGlobalBenefits_api_doc.md  ECPaymentInformation_api_doc.md  ECSkillsManagement_api_doc.md  EmpCostAssignment_api_doc.md  ExtensionPoint_api_doc.md  FoundationPlatformPLT_api_doc.md  FunctionalAreaGO_api_doc.md  FundCenterGO_api_doc.md  InstructionalText_api_doc.md  OnboardingOBX_api_doc.md  OnboardingONB_api_doc.md  PLTCustomNavigation_api_doc.md  PLTDPCS_api_doc.md  PLTExecutionManager_api_doc.md  PLTGenericObjects_api_doc.md  PLTRoleBasedPermissions_api_doc.md  PLTSSO_api_doc.md  PLTScim_api_doc.md  PLTSuccessStore_api_doc.md  PLTTodo_api_doc.md  PLTUserInterfaceThemes_api_doc.md  PLTUserManagement_api_doc.md  PMFormsManagement_api_doc.md  PMGMContinuousFeedback_api_doc.md  PMGMContinuousPerformanceManagement_api_doc.md  (+27 more)
src/databricks/labs/community_connector/sources/shopify/: README.md  _generated_shopify_python_source.py  pyproject.toml  shopify.py
tests/: lakeflow_connect_test_utils.py  test_suite.py
(+32 files in other folders)
